--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "author": "Angel Huerta <ahuerta>",
   "license": "MIT",
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
